# comp371-opengl-skeleton

./: .travis.yml  CMakeLists.txt  COMP371_hw1.fs  COMP371_hw1.vs  README.md  appveyor.yml  jenkins.py  main.cpp
